tests/baselines/reference/arrayConcatMap.errors.txt
arrayConcatMap.ts(1,20): error TS2769: No overload matches this call.
  Overload 1 of 2, '(...items: ConcatArray<never>[]): never[]', gave the following error.
    Type '{ a: number; }' is not assignable to type 'never'.
  Overload 2 of 2, '(...items: ConcatArray<never>[]): never[]', gave the following error.
    Type '{ a: number; }' is not assignable to type 'never'.
arrayConcatMap.ts(2,23): error TS2339: Property 'a' does not exist on type 'never'.


==== arrayConcatMap.ts (2 errors) ====
    var x = [].concat([{ a: 1 }], [{ a: 2 }])
                       ~~~~~~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   Overload 1 of 2, '(...items: ConcatArray<never>[]): never[]', gave the following error.
!!! error TS2769:     Type '{ a: number; }' is not assignable to type 'never'.
!!! error TS2769:   Overload 2 of 2, '(...items: ConcatArray<never>[]): never[]', gave the following error.
!!! error TS2769:     Type '{ a: number; }' is not assignable to type 'never'.
              .map(b => b.a);
                          ~
!!! error TS2339: Property 'a' does not exist on type 'never'.